feat: Double pass detections and confidence score
